[tool.poetry]
name = "yae-miko-rewrite"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncpraw = "^7.4.0"
Flask = "^2.0.1"
discord = "^1.7.3"
asyncprawcore = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
